--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_radioforus.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_radioforus.xml
@@ -37,7 +37,7 @@
                     <link rel="stylesheet" href="/website_pinetwork_games_odoo/static/src/modals/colorbox/example3/colorbox.css" />
                     <script id="colorbox-lib" src="/website_pinetwork_games_odoo/static/src/modals/colorbox/jquery.colorbox.js"></script>
                     
-                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_radioforus.js?v=1.151"></script>
+                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_radioforus.js?v=1.152"></script>
                     
                     <!--<script t-if="mainnet in ['Testnet ON', 'Testnet OFF']" async="true" t-att-src="google_adsense" crossorigin="anonymous"></script>
                     -->
@@ -313,6 +313,7 @@
                                     <h3 t-if="mainnet in ['Mainnet ON', 'Mainnet OFF']" align="center" style="font-weight:600">Mainnet</h3>
                                     <h3 t-else="" align="center" style="font-weight:600">Testnet</h3>
                                     <h3 align="center" style="font-weight:600" class="show-not-verified-user">Get verified</h3>
+                                    <h3 align="center" style="font-weight:600; display: none;" class="show-verified-user">You are already verified</h3>
                                     
                                     <t t-set="amount_end" t-value="round(amount*3, 7)"/>
                                     
