--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -55,7 +55,7 @@
                 <style>
                     .btn
                     {
-                        color: lightgray !important;
+                        color: white !important;
                         font-weight: bold !important;
                         border: 2px solid black !important;
                         word-spacing: 2px !important;
