--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -53,9 +53,42 @@
                 <div id="rewarded_message_2" style="display:none;">In order to maintain our servers, we ask you to watch a Rewarded Ad until the end, we will give you a reward at the end of the ad.</div>
                 
                 <style>
-                    .btn
+                    /*.btn*/
+                    .btn-outline-info, 
+                    .btn-outline-primary, 
+                    .btn-outline-success,
+                    .btn-outline-warning,
+                    .btn-outline-danger,
+                    .btn-outline-primary,
+                    .btn-outline-dark,
+                    .btn-info, 
+                    .btn-primary, 
+                    .btn-success,
+                    .btn-warning,
+                    .btn-danger,
+                    .btn-primary,
+                    .btn-secondary,
+                    .btn-dark
                     {
                         color: white !important;
+                        font-weight: bold !important;
+                        border: 2px solid black !important;
+                        word-spacing: 2px !important;
+                        text-shadow: 
+                            -1px -1px 0px #000,
+                             0px -1px 0px #000,
+                             1px -1px 0px #000,
+                            -1px  0px 0px #000,
+                             1px  0px 0px #000,
+                            -1px  1px 0px #000,
+                             0px  1px 0px #000,
+                             1px  1px 0px #000;
+                    }
+                    
+                    /*.btn*/
+                    .btn-outline-secondary
+                    {
+                        color: lightgray !important;
                         font-weight: bold !important;
                         border: 2px solid black !important;
                         word-spacing: 2px !important;
