--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -59,6 +59,7 @@
                         font-weight: bold !important;
                         border: 2px solid black !important;
                         word-spacing: 2px !important;
+                        letter-spacing: 2px !important;
                         text-shadow: 
                             -1px -1px 0px #000,
                              0px -1px 0px #000,
