--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -53,8 +53,7 @@
                 <div id="rewarded_message_2" style="display:none;">In order to maintain our servers, we ask you to watch a Rewarded Ad until the end, we will give you a reward at the end of the ad.</div>
                 
                 <style>
-                    .btn, .btn:hover, .btn:active, 
-                    btn:disabled, btn:disabled:hover, btn:disabled:active
+                    .btn, .btn:hover, .btn:active
                     {
                         color: white !important;
                         font-weight: bold !important;
@@ -70,6 +69,15 @@
                             -1px  1px 0px #000,
                              0px  1px 0px #000,
                              1px  1px 0px #000;
+                    }
+                    
+                    btn:disabled, btn:disabled:hover, btn:disabled:active
+                    {
+                        color: white !important;
+                        font-weight: bold !important;
+                        border: 2px solid black !important;
+                        word-spacing: 2px !important;
+                        letter-spacing: 2px !important;
                     }
                 </style>
                 
