--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -73,7 +73,7 @@
                     
                     btn:disabled, btn:disabled:hover, btn:disabled:active
                     {
-                        color: white !important;
+                        color: black !important;
                         font-weight: bold !important;
                         border: 2px solid black !important;
                         word-spacing: 2px !important;
