--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -55,11 +55,11 @@
                 <style>
                     .btn, .btn:hover, .btn:active
                     {
-                        color: white !important;
+                        color: silver !important;
                         font-weight: bold !important;
                         border: 2px solid black !important;
-                        word-spacing: 2px !important;
-                        letter-spacing: 2px !important;
+                        /*word-spacing: 2px !important;
+                        letter-spacing: 2px !important;*/
                         text-shadow: 
                             -1px -1px 0px #000,
                              0px -1px 0px #000,
