--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -53,7 +53,7 @@
                 <div id="rewarded_message_2" style="display:none;">In order to maintain our servers, we ask you to watch a Rewarded Ad until the end, we will give you a reward at the end of the ad.</div>
                 
                 <style>
-                    .btn, .btn:hover, .btn:active
+                    .btnnot(:disabled), .btn:not(:disabled):hover, .btn:not(:disabled):active
                     {
                         color: silver !important;
                         font-weight: bold !important;
