--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -53,7 +53,7 @@
                 <div id="rewarded_message_2" style="display:none;">In order to maintain our servers, we ask you to watch a Rewarded Ad until the end, we will give you a reward at the end of the ad.</div>
                 
                 <style>
-                    .btn:not(:disabled), .btn:not(:disabled) *, .btn:not(:disabled):hover, .btn:not(:disabled):active
+                    .btn:not(:disabled), .btn:not(:disabled):hover, .btn:not(:disabled):active
                     {
                         color: silver !important;
                         font-weight: bold !important;
@@ -71,7 +71,7 @@
                              1px  1px 0px #000;
                     }
                     
-                    .btn:disabled, .btn:disabled *, .btn:disabled:hover, .btn:disabled:active
+                    .btn:disabled, .btn:disabled:hover, .btn:disabled:active
                     {
                         transform: none;
                     }
