--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -75,6 +75,11 @@
                     {
                         transform: none;
                     }
+                    
+                    .btn *
+                    {
+                        color: silver !important;
+                    }
                 </style>
                 
                <span id="website_translation_latin_chain" name="website_translation_latin_chain">
