--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -73,6 +73,7 @@
                     
                     .btn:disabled, .btn:disabled:hover, .btn:disabled:active
                     {
+                        color: black !important;
                         transform: none;
                     }
                     
