--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -78,7 +78,7 @@
                     
                     .btn:disabled, .btn:disabled *, .btn:disabled:hover, .btn:disabled:active
                     {
-                        color: black !important;
+                        color: gray !important;
                     }
                 </style>
                 
