--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -81,10 +81,10 @@
                         color: black !important;
                     }
                     
-                    .darkmode--activated .btn-outline-success:disabled, 
-                    .darkmode--activated .btn-outline-success:disabled *, 
-                    .darkmode--activated .btn-outline-success:disabled:hover, 
-                    .darkmode--activated .btn-outline-success:disabled:active
+                    .darkmode--activated .btn-outline-*:disabled, 
+                    .darkmode--activated .btn-outline-*:disabled *, 
+                    .darkmode--activated .btn-outline-*:disabled:hover, 
+                    .darkmode--activated .btn-outline-*:disabled:active
                     {
                         color: silver !important;
                     }
